/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java library project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.2.1/userguide/building_java_projects.html in the Gradle documentation.
 */

// ====================================== PLUGINS =============================
plugins {
    // Apply the java-library plugin for API and implementation separation.
    `java-library`
    java
    id("com.diffplug.spotless") version "6.25.0"
}

configurations{
    create("jaxws")
}

spotless {
    java {
        target("src/**/*.java")
        targetExclude("build/**/*.java")
        targetExclude("src/test/**/*.java")
        licenseHeader(
            """// SPDX-License-Identifier: Apache-2.0
            // Copyright (c) 2026 Nulldoomer

            """
        )

        removeUnusedImports()
        googleJavaFormat()
    }
}

// ====================================== PLUGINS =============================

// ========================= VERSIONS ==========================================
group = "io.github.opensri"
version = "0.1.0-SNAPSHOT"


// ========================= VERSIONS ==========================================

// ===================== DEPENDENCIES ==========================================
repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Logging API only (no implementation)
    api("org.slf4j:slf4j-api:2.0.13")

    // Testing
    testImplementation(platform("org.junit:junit-bom:5.10.2"))
    testImplementation("org.junit.jupiter:junit-jupiter")
    testImplementation("net.jqwik:jqwik:1.8.4")
    testImplementation("org.mockito:mockito-core:5.11.0")

    // XML serialization
    implementation("jakarta.xml.bind:jakarta.xml.bind-api:4.0.0")
    runtimeOnly("org.glassfish.jaxb:jaxb-runtime:4.0.0")

    // Firma XAdES
    implementation("com.googlecode.xades4j:xades4j:2.4.0")

    // Web Service
    implementation("jakarta.xml.ws:jakarta.xml.ws-api:4.0.1")
    runtimeOnly("com.sun.xml.ws:jaxws-rt:4.0.2")

    // Tool Config
    "jaxws"("com.sun.xml.ws:jaxws-tools:4.0.2")
}

// ===================== DEPENDENCIES ==========================================

// ===================== TOOLCHAIN ==========================================
// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

// ===================== TOOLCHAIN ==========================================

// ===================== TEST PLATFORM ==========================================
tasks.named<Test>("test") {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
    jvmArgs("-XX:+EnableDynamicAgentLoading")
}
// ===================== TEST PLATFORM ==========================================


// ===================== WS-TASKS CONFIG ==========================================
fun registerWsImportTask(
    name: String,
    pkg: String,
    wsdlPath: String
) {
    tasks.register<JavaExec>(name) {
        group = "wsdl"
        description = "Genera cliente SOAP: $pkg"

        val outputDir = layout.buildDirectory.dir("generated-sources/wsdl")

        doFirst {
            outputDir.get().asFile.mkdirs()
        }

        // 🔥 AQUÍ ESTÁ LA CLAVE
        classpath = configurations["jaxws"]

        mainClass.set("com.sun.tools.ws.WsImport")

        args(
            "-keep",
            "-s", outputDir.get().asFile.absolutePath,
            "-d", outputDir.get().asFile.absolutePath,
            "-p", pkg,
            wsdlPath
        )
    }
}
registerWsImportTask(
    "wsimportRecepcion",
    "ec.sri.recepcion",
    "src/main/resources/wsdl/dev/RecepcionComprobantes.wsdl"
)

registerWsImportTask(
    "wsimportAutorizacion",
    "ec.sri.autorizacion",
    "src/main/resources/wsdl/dev/AutorizacionComprobantes.wsdl"
)

sourceSets{
    main{
        java{
            srcDir(layout.buildDirectory.dir("generated-sources/wsdl"))
        }
    }
}
// ===================== WS-TASKS CONFIG ==========================================
